# futureauth

./: .env.example  .gitignore  Dockerfile  SEO.md  migrate.js  package-lock.json  package.json  skill.md
backend/: Cargo.toml
backend/migrations/: 001_init.sql  002_drop_publishable_key.sql  003_otp_log.sql  004_project_callback_url.sql  005_otp_log_project_id.sql  006_billing.sql
backend/src/: config.rs  error.rs  main.rs  rate_limit.rs
backend/src/middleware/: admin_auth.rs  dashboard_auth.rs  mod.rs  project_auth.rs
backend/src/models/: api_key.rs  daily_usage.rs  mod.rs  project.rs  project_plan.rs
backend/src/routes/: admin.rs  auth.rs  billing.rs  keys.rs  mod.rs  otp.rs  projects.rs
backend/src/services/: email.rs  sms.rs
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
dashboard/src/: App.tsx
dashboard/src/lib/: api.ts  auth-client.ts
dashboard/src/pages/: Dashboard.tsx  Docs.tsx  Landing.tsx  (+5 more)
frontend/: index.html  package-lock.json  vite.config.ts
frontend/public/: llms.txt  robots.txt  site.webmanifest  sitemap.xml
frontend/src/: App.tsx
migrations/: 001_init.sql  002_auth_mode.sql  003_developer_api_keys.sql  004_global_credentials.sql  005_betterauth_tables.sql
sdk-js/: package-lock.json  package.json
sdk-js/src/: client.ts  config.ts  errors.ts  futureauth.ts  index.ts  types.ts
server/: Cargo.toml
server/migrations/: 001_init.sql
server/src/: main.rs
src/: dashboard-auth.js  db.js  email.js  field-mappings.js  index.js  project-auth.js  sms.js
src/routes/: api-keys.js  projects.js
(+28 files in other folders)
