[package]
name = "futureauth-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "futureauth-server"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
nanoid = "0.4"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futureauth = "0.3.1"
